added support for parameter cancellation